Add no search result image

--- a/search.html
+++ b/search.html
@@ -200,7 +200,13 @@
             <div id="deals-go-here" class="row row-cols-auto mt-5 justify-content-center"></div>
         </div>
     </div>
-    <div id="no-results" class="d-flex justify-content-center"></div>
+    <div>
+        <div id="no-results" class="d-flex justify-content-center"></div>
+        <div class="text-center">
+            <img class="mt-5"
+                src="https://cdn-icons-png.freepik.com/256/6179/6179016.png?ga=GA1.1.1263291304.1741026299&semt=ais_hybrid">
+        </div>
+    </div>
 
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
