--- a/main.html
+++ b/main.html
@@ -55,22 +55,16 @@
             <div class="row my-auto">
                 <h1 class="card-item col">Item Title</h1>
                 <div class="col my-auto align-content-end">
-                    <button id="saveItem" type="button" class="bg-white rounded-2"><svg
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    <button id="saveItem" type="button" class="bg-white rounded-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6 " height="35px" weight="35px">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
                         </svg>
                     </button>
-                    <button id="saveDeal" type="button" onClick="reply_click(this.id)"
-                        class="rounded-2 saveDealButton"><svg xmlns="http://www.w3.org/2000/svg" fill="white"
-                            viewBox="0 0 24 24" stroke-width="1.5" height="35px" weight="35px" stroke="currentColor"
-                            class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M17.593 3.322c1.1.128 1.907 1.077 1.907 2.185V21L12 17.25 4.5 21V5.507c0-1.108.806-2.057 1.907-2.185a48.507 48.507 0 0 1 11.186 0Z" />
-                        </svg>
-
-                    </button>
+    
+                    <!-- New Bookmark Icon -->
+                    <i class="material-icons saveDealButton">bookmark_border</i>
                 </div>
             </div>
             <p class="card-description">Description</p>
@@ -81,25 +75,22 @@
                         <h4 class="d-inline">Deal: <span class="card-deal"></span></h4>
                     </div>
                     <div class="my-2">
-                        <h4 class="d-inline">Price: <span class="card-price"></span>
-                        </h4>
+                        <h4 class="d-inline">Price: <span class="card-price"></span></h4>
                     </div>
                     <div>
                         <h4 class="d-inline">Brand: </h4><span class="card-brand"></span>
-
                     </div>
                     <div class="my-2">
-                        <h4 class="d-inline"><span class="fw-semibold">Retailer: </span><span
-                                class="card-retailer"></span></h4>
+                        <h4 class="d-inline"><span class="fw-semibold">Retailer: </span><span class="card-retailer"></span></h4>
                     </div>
                     <div>
-                        <h4 class="d-inline"><span class="fw-semibold">End Date: </span><span
-                                class="card-end-date"></span></h4>
+                        <h4 class="d-inline"><span class="fw-semibold">End Date: </span><span class="card-end-date"></span></h4>
                     </div>
                 </div>
             </div>
         </div>
     </template>
+    
 
     <!------------------------------>
     <!-- Your HTML Layout go here -->
