Improve popup layout

--- a/search.html
+++ b/search.html
@@ -52,10 +52,10 @@
     <template id="dealPopupTemplate">
         <div class="popup shadow-lg">
             <button type="button" class="btn-close" aria-label="Close"></button>
-            <div class="row my-auto">
-                <h1 class="card-item col">Item Title</h1>
+            <div class="col my-auto">
+                <h2 class="card-item col">Item Title</h2>
                 <div class="col my-auto align-content-end">
-                    <button id="saveItem" type="button" class="bg-white rounded-2"><svg
+                    <button id="saveItem" type="button" class="bg-white rounded-2 my-2"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6 " height="35px" weight="35px">
                             <path stroke-linecap="round" stroke-linejoin="round"
