--- a/favourites.html
+++ b/favourites.html
@@ -2,20 +2,24 @@
 <html lang="en">
 
 <head>
-    <title>Deals Hound</title>
-    <meta name="Home" content="Deals Hound App" />
+    <title>My BCIT Project</title>
+    <meta name="comp1800 template" content="My 1800 App">
 
+    <!------------------------>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!------------------------>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap Library CSS CDN go here -->
+    <!------------------------------------------>
+    <!-- Bootstrap Library CSS JS CDN go here -->
+    <!------------------------------------------>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
+
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -23,21 +27,13 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
-    <!-- Other libraries go here -->
-    <!-- Link to styles of your own -->
-    <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico" />
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
+    <!-- Navbar Placeholder -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <!-- Brand -->
@@ -118,47 +114,92 @@
             </div>
         </div>
     </nav>
-    <!------------------------------>
 
-    <div class="container my-5">
-        <h2 class="text-center">Favourites</h2>
-        <ul class="list-group" id="favourites-list">
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                Apple
-                <button class="btn like-btn" onclick="toggleFavourite(this)">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
-                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
-                        <path
-                            d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z">
-                        </path>
-                    </svg>
-                </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                Bread
-                <button class="btn like-btn" onclick="toggleFavourite(this)">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
-                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
-                        <path
-                            d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z">
-                        </path>
-                    </svg>
-                </button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                Milk
-                <button class="btn like-btn" onclick="toggleFavourite(this)">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
-                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
-                        <path
-                            d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z">
-                        </path>
-                    </svg>
-                </button>
-            </li>
-        </ul>
+    <div class="container">
+        <h1>Saved Deals for <span id="name-goes-here"></span></h1>
+        
+        <div class="container">
+            <div id="bookmarks-here" class="row row-cols-auto"></div>
+        </div>
     </div>
 
+    <!-- Template for saved deals -->
+    <template id="dealsCardTemplate">
+        <div class="card py-2 mx-2 bg-light" style="width: 12rem;">
+            <img class="card-image card-img-top" src="..." alt="Deal Image">
+            <div class="card-body">
+                <h5 class="card-title">Deal Name</h5>
+                <p class="card-price">Price Placeholder</p>
+                <p class="card-deal">Deal Placeholder</p>
+                <p class="card-retailer">Retailer Placeholder</p>
+                <p class="card-end-date">End Date Placeholder</p>
+            </div>
+        </div>
+    </template>
+
+    <template id="dealCardTemplate">
+        <div class="card py-2 mx-2 hovernow mb-4" style="width: 18rem">
+            <img class="card-image card-img-top" src=" ..." alt="Deal Image" />
+            <h5 class="card-item">Deal Name</h5>
+            <div class="card-body-template mt-3">
+                <p><span class="fw-semibold">Deal: </span><span class="card-deal"></span></p>
+                <p><span class="fw-semibold">Price: </span><span class="card-price"></span></p>
+                <p><span class="fw-semibold">Retailer: </span><span class="card-retailer"></span></p>
+                <p><span class="fw-semibold">End Date: </span><span class="card-end-date"></span></p>
+            </div>
+        </div>
+    </template>
+
+    <div class="overlay" id="overlay"></div>
+    <template id="dealPopupTemplate">
+        <div class="popup shadow-lg">
+            <button type="button" class="btn-close" aria-label="Close"></button>
+            <div class="row my-auto">
+                <h1 class="card-item col">Item Title</h1>
+                <div class="col my-auto d-flex gap-2">
+                    <button id="saveItem" type="button" class="bg-white rounded-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-6 " height="35px" weight="35px">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+                        </svg>
+                    </button>
+
+                    <!-- New Bookmark Icon -->
+                    <button type="button" class="bg-white rounded-2 px-12 py-6 fixed-size">
+                        <i class="material-icons saveDealButton">bookmark_border</i>
+                    </button>
+                </div>
+            </div>
+            <p class="card-description">Description</p>
+            <div class="row flex-row align-items-center my-auto">
+                <div class="col"> <img class="card-image-popup card-img-top" src=" ..." alt="..." /></div>
+                <div class="card-body-template mt-3 mx-auto dealinfo col">
+                    <div>
+                        <h4 class="d-inline">Deal: <span class="card-deal"></span></h4>
+                    </div>
+                    <div class="my-2">
+                        <h4 class="d-inline">Price: <span class="card-price"></span></h4>
+                    </div>
+                    <div>
+                        <h4 class="d-inline">Brand: </h4><span class="card-brand"></span>
+                    </div>
+                    <div class="my-2">
+                        <h4 class="d-inline"><span class="fw-semibold">Retailer: </span><span
+                                class="card-retailer"></span></h4>
+                    </div>
+                    <div>
+                        <h4 class="d-inline"><span class="fw-semibold">End Date: </span><span
+                                class="card-end-date"></span></h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </template>
+
+    
+
+    <!-- Footer Placeholder -->
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
@@ -194,7 +235,7 @@
                         </svg>
                         Favourites
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="./profiles.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
@@ -207,14 +248,11 @@
         </div>
     </footer>
 
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
+    <!-- JavaScript Files -->
     <script src="./scripts/firebaseAPI_Team05.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/favourites.js"></script>
-    <script src="./scripts/navigateToSearch.js"></script>
+    <script src="./scripts/saved.js"></script>
+
 </body>
 
 </html>
