--- a/index.html
+++ b/index.html
@@ -55,21 +55,15 @@
             <div class="row my-auto">
                 <h1 class="card-item col">Item Title</h1>
                 <div class="col my-auto align-content-end">
-                    <button id="saveItem" type="button" class="bg-white rounded-2"><svg
+                    <!-- <button id="saveItem" type="button" class="bg-white rounded-2"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6 " height="35px" weight="35px">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
                         </svg>
-                    </button>
-                    <button id="saveDeal" type="button" onClick="reply_click(this.id)"
-                        class="rounded-2 saveDealButton"><svg xmlns="http://www.w3.org/2000/svg" fill="white"
-                            viewBox="0 0 24 24" stroke-width="1.5" height="35px" weight="35px" stroke="currentColor"
-                            class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M17.593 3.322c1.1.128 1.907 1.077 1.907 2.185V21L12 17.25 4.5 21V5.507c0-1.108.806-2.057 1.907-2.185a48.507 48.507 0 0 1 11.186 0Z" />
-                        </svg>
-
+                    </button> -->
+                    <button type="button" class="bg-white rounded-2 px-12 py-6 fixed-size">
+                        <i class="material-icons saveDealButton">bookmark_border</i>
                     </button>
                 </div>
             </div>
