Add filter side bar html

--- a/search.html
+++ b/search.html
@@ -191,12 +191,38 @@
     <div class="container mx-auto">
         <div id="deals-popup-here"></div>
     </div>
-    <!-- <div class="sidebar">
-            <a class="active" href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
-        </div> -->
+
+
+    <div class="sidebar">
+        <div class="ml-2 left-2">
+            <h4>Retailer</h4>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label id="save-on-foods" class="form-check-label" for="flexCheckDefault">
+                    Save-On-Foods
+                </label>
+            </div>
+            <div id="retailer" class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="superstore">
+                <label id="superstore_label" class="form-check-label" for="superstore">
+                    Superstore
+                </label>
+            </div>
+            <div id="retailer" class="form-check ml-2">
+                <input class="form-check-input" type="checkbox" value="" id="walmart">
+                <label id="walmart_label" class="form-check-label" for="walmart">
+                    Walmart
+                </label>
+            </div>
+            <div id="retailer" class="form-check ml-2">
+                <input class="form-check-input" type="checkbox" value="" id="whole_foods">
+                <label id="whole_foods_label" class="form-check-label" for="whole_foods">
+                    Whole Foods
+                </label>
+            </div>
+        </div>
+    </div>
+
     <div class="d-flex flex-lg-row mainContainer">
         <div class="container">
             <div id="deals-go-here" class="row row-cols-auto mt-5 justify-content-center"></div>
