--- a/main.html
+++ b/main.html
@@ -54,33 +54,26 @@
             <button type="button" class="btn-close" aria-label="Close"></button>
             <div class="row my-auto">
                 <h1 class="card-item col">Item Title</h1>
-                <div class="col my-auto d-flex gap-2">
-                    <button id="saveItem" type="button" class="bg-white rounded-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6 " height="35px" weight="35px">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-                        </svg>
-                    </button>
-
-                    <!-- New Bookmark Icon -->
-                    <button type="button" class="bg-white rounded-2 px-12 py-6 fixed-size">
+                <div class="col justify-content-end">
+                    <button type="button" class="bg-white rounded-2 fixed-size">
                         <i class="material-icons saveDealButton">bookmark_border</i>
                     </button>
                 </div>
             </div>
-            <p class="card-description">Description</p>
+            <p class="card-description px-12">Description</p>
             <div class="row flex-row align-items-center my-auto">
                 <div class="col"> <img class="card-image-popup card-img-top" src=" ..." alt="..." /></div>
                 <div class="card-body-template mt-3 mx-auto dealinfo col">
                     <div>
-                        <h4 class="d-inline">Deal: <span class="card-deal"></span></h4>
+                        <h4 class="d-inline"><span class="fw-semibold">Deal: </span><span class="card-deal"></span></h4>
                     </div>
                     <div class="my-2">
-                        <h4 class="d-inline">Price: <span class="card-price"></span></h4>
+                        <h4 class="d-inline"><span class="fw-semibold">Price: </span><span class="card-price"></span>
+                        </h4>
                     </div>
                     <div>
-                        <h4 class="d-inline">Brand: </h4><span class="card-brand"></span>
+                        <h4 class="d-inline"><span class="fw-semibold">Brand: </span><span class="card-brand"></span>
+                        </h4>
                     </div>
                     <div class="my-2">
                         <h4 class="d-inline"><span class="fw-semibold">Retailer: </span><span
