Fix broken links and duplicate search button

--- a/aboutus.html
+++ b/aboutus.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
       <!-- Brand -->
-      <a class="navbar-brand active" href="index.html">
+      <a class="navbar-brand active" href="main.html">
         <img src="./images/hound_white.png" height="36" alt="" />
       </a>
       <form class="d-flex me-auto" role="search">
@@ -44,13 +44,6 @@
           </svg>
         </button>
         <div class="dropdown">
-          <button id="searchButton" class="btn btn-success-light" type="button">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
-              stroke-linecap="round" stroke-linejoin="round" width="28" height="28" stroke-width="1.5">
-              <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
-              <path d="M21 21l-6 -6"></path>
-            </svg>
-          </button>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="filterDropdown">
             <li><a class="dropdown-item" href="#">Lowest Price</a></li>
             <li><a class="dropdown-item" href="#">Highest Discount</a></li>
@@ -64,7 +57,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav d-block d-lg-flex">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="./shoppinglist.html">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-linecap="round" stroke-linejoin="round" width="28" height="28" stroke-width="1.5">
                 <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2"></path>
@@ -180,7 +173,7 @@
     <div class="container-fluid d-flex justify-content-center">
       <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
         <div class="d-flex text-white">
-          <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page" href="#"><svg
+          <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page" href="./main"><svg
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
               stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
               <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
@@ -189,7 +182,7 @@
             </svg>
             Home
           </a>
-          <a class="nav-link d-flex flex-column align-items-center" href="#">
+          <a class="nav-link d-flex flex-column align-items-center" href="./shoppinglist.html">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
               stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1.5">
               <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2"></path>
@@ -200,14 +193,14 @@
             </svg>
             Shopping List
           </a>
-          <a class="nav-link d-flex flex-column px-5 align-items-center" href="#">
+          <a class="nav-link d-flex flex-column px-5 align-items-center" href="./favourites.html">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
               stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
               <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
             </svg>
             Favourites
           </a>
-          <a class="nav-link d-flex flex-column align-items-center" href="#">
+          <a class="nav-link d-flex flex-column align-items-center" href="./profiles.html">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
               stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
               <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
