--- a/search.html
+++ b/search.html
@@ -193,7 +193,7 @@
     </div>
 
 
-    <div class="sidebar">
+    <!-- <div class="sidebar">
         <div class="ml-2 left-2">
             <h4>Retailer</h4>
             <div class="form-check">
@@ -221,7 +221,7 @@
                 </label>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="d-flex flex-lg-row mainContainer">
         <div class="container">
