--- a/search.html
+++ b/search.html
@@ -97,7 +97,7 @@
 
     <!------------------------------>
     <!-- Your HTML Layout go here -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
         <div class="container-fluid">
             <!-- Brand -->
             <a class="navbar-brand active" href="./main.html">
@@ -182,14 +182,20 @@
     <!------------------------------>
 
 
-    <div class="container mx-auto">
+    <div class="container mx-auto mt-5">
         <div id="deals-popup-here"></div>
     </div>
 
 
-    <!-- <div class="sidebar">
+    <div class="sidebar">
         <div class="ml-2 left-2">
             <h4>Retailer</h4>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label id="save-on-foods" class="form-check-label" for="flexCheckDefault">
+                    No Frills
+                </label>
+            </div>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                 <label id="save-on-foods" class="form-check-label" for="flexCheckDefault">
@@ -215,7 +221,7 @@
                 </label>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="d-flex flex-lg-row mainContainer">
         <div class="container">
