Implement price filtering

--- a/search.html
+++ b/search.html
@@ -220,6 +220,18 @@
                     Whole Foods
                 </label>
             </div>
+            <div id="filter_brand" class="mt-2">
+                <h4>Brand</h4>
+            </div>
+            <div id="filter_price" class="mt-2">
+                <h4>Price</h4>
+                <div class="price-filter">
+                    <span>$</span>
+                    <input class="" type="number" id="min-price" placeholder="Min" min="0">
+                    <span>-</span>
+                    <input class="" type="number" id="max-price" placeholder="Max" min="0">
+                </div>
+            </div>
         </div>
     </div>
 
