Change icon to heart

--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
                         </svg>
                     </button> -->
                     <button type="button" class="bg-white rounded-2 px-12 py-6 fixed-size">
-                        <i class="material-icons saveDealButton">bookmark_border</i>
+                        <i class="material-icons saveDealButton">favorite_border</i>
                     </button>
                 </div>
             </div>
