--- a/favourites.html
+++ b/favourites.html
@@ -167,7 +167,7 @@
 
                     <!-- New Bookmark Icon -->
                     <button type="button" class="bg-white rounded-2 px-12 py-6 fixed-size">
-                        <i class="material-icons saveDealButton">bookmark_border</i>
+                        <i class="material-icons saveDealButton">favorite</i>
                     </button>
                 </div>
             </div>
