Implement brand filter

--- a/search.html
+++ b/search.html
@@ -220,10 +220,12 @@
                     Whole Foods
                 </label>
             </div>
-            <div id="filter_brand" class="mt-2">
+            <div class="form-group mt-4">
                 <h4>Brand</h4>
+                <input type="search" class="form-control" id="filter_brand" aria-describedby="brand_filter"
+                    placeholder="Filter Brand">
             </div>
-            <div id="filter_price" class="mt-2">
+            <div id="filter_price" class="mt-4">
                 <h4>Price</h4>
                 <div class="price-filter">
                     <span>$</span>
@@ -280,7 +282,7 @@
                         </svg>
                         Favourites
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="./profiles.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
