--- a/search.html
+++ b/search.html
@@ -188,7 +188,7 @@
 
 
     <div class="sidebar">
-        <div class="ml-2 left-2">
+        <div id ="filter_contents" class="ml-2 left-2">
             <h4>Retailer</h4>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -234,6 +234,12 @@
                     <input class="" type="number" id="max-price" placeholder="Max" min="0">
                 </div>
             </div>
+        </div>
+        <div id="open_close" class="text-center">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6 text-center" width="30px">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+            </svg>
         </div>
     </div>
 
