hide filter icon

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -85,7 +85,7 @@
               <path d="M21 21l-6 -6"></path>
             </svg>
           </button>
-          <div class="dropdown">
+          <!-- <div class="dropdown">
             <button
               class="btn btn-success-light dropdown-toggle"
               type="button"
@@ -116,7 +116,7 @@
               <li><a class="dropdown-item" href="#">Newest Deals</a></li>
               <li><a class="dropdown-item" href="#">Expiring Soon</a></li>
             </ul>
-          </div>
+          </div> -->
         </form>
 
         <!-- Collapsible menu-->
