--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -210,7 +210,7 @@
       <div class="col-12 col-md-6">
         <!-- left column -->
         <div class="shopping-list-container mb-4">
-          <h4 class="text-center mt-1 mb-2 text-muted">My List</h4>
+          <h4 class="text-center mt-1 mb-2 text-muted">My Shopping List</h4>
 
           <!-- Row for input and buttons -->
           <div class="mb-3">
@@ -306,9 +306,7 @@
             </div>
           </div>
           <!-- Recommended Items -->
-          <h4 class="text-center font-extralight my-3 text-muted">
-            Recommended Items
-          </h4>
+          <h4 class="text-center font-extralight my-3 text-muted">Quick Add</h4>
           <div class="container d-flex flex-row flex-wrap">
             <div class="d-flex flex-column text-center align-items-center">
               <button
