Add class name for filter by enddate input form

--- a/search.html
+++ b/search.html
@@ -245,6 +245,13 @@
                     <input class="max-price" type="number" placeholder="Max" min="0">
                 </div>
             </div>
+            <div class="mt-4">
+                <h4>End Date</h4>
+                <div>
+                    <label for="startDate">Start</label>
+                    <input id="startDate" class="form-control filter_enddate" type="date" />
+                </div>
+            </div>
         </div>
     </div>
     <!-- <div id="open_close" class="text-center">
