Implement scroll to top button

--- a/search.html
+++ b/search.html
@@ -377,7 +377,9 @@
     <div>
         <div id="no-results" class="d-flex justify-content-center"></div>
     </div>
+    <p class="mt-5"></p>
 
+    <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">Top</button>
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
