--- a/main.html
+++ b/main.html
@@ -201,9 +201,12 @@
     <div class="container mx-auto">
         <div id="deals-popup-here"></div>
     </div>
-    <div class="container">
+    <div class="container pb-4">
         <div id="deals-go-here" class="row row-cols-auto  justify-content-center"></div>
     </div>
+    <p class="mt-5"></p>
+
+    <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">Top</button>
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
