Make the sort drop down drop off the side

--- a/search.html
+++ b/search.html
@@ -113,7 +113,7 @@
                         <path d="M21 21l-6 -6"></path>
                     </svg>
                 </button>
-                <div class="dropdown">
+                <div class="dropdown dropend">
                     <button class="btn btn-success-light dropdown-toggle" type="button" id="filterDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="2em">
