Add top button to favourites page

--- a/favourites.html
+++ b/favourites.html
@@ -125,15 +125,15 @@
             </div>
         </h1>
 
-        <div class="container">
-            <div id="bookmarks-here" class="row row-cols-auto"></div>
-        </div>
         <div class="container mx-auto">
             <div id="deals-popup-here"></div>
         </div>
         <div class="container pb-4">
             <div id="deals-go-here" class="row row-cols-auto  justify-content-center"></div>
         </div>
+        <p class="mt-5"></p>
+
+        <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">Top</button>
     </div>
 
     <!-- Template for saved deals -->
