Fix profile logic for mobile and pc

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -174,8 +174,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                id="signOut"
-                href="./index.html"
+                href="./profiles.html"
                 role="button"
               >
                 <svg
@@ -195,7 +194,7 @@
                     d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855"
                   ></path>
                 </svg>
-                Sign Out
+                Profile
               </a>
             </li>
           </ul>
