--- a/profiles.html
+++ b/profiles.html
@@ -137,7 +137,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="signOut" href="index.html" role="button">
+              <a class="nav-link" href="profiles.html" role="button">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -155,7 +155,7 @@
                     d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855"
                   ></path>
                 </svg>
-                Sign Out
+                Profile
               </a>
             </li>
           </ul>
@@ -197,9 +197,26 @@
         </fieldset>
     
         <!-- Action Buttons -->
-        <div class="d-flex justify-content-end gap-2 mt-1">
-          <button type="button" class="btn btn-secondary" onclick="editUserInfo()">Edit</button>
-          <button type="button" class="btn btn-success" onclick="saveUserInfo()">Save</button>
+        <div class="d-flex justify-content-between">
+          <div class="mt-2">
+            <a
+            class="nav-link"
+            id="signOut"
+            href="./index.html"
+            role="button"
+            >
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f">
+              <path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h280v80H200Zm440-160-55-58
+              102-102H360v-80h327L585-622l55-58 200 200-200 200Z"/></svg>
+            Sign Out
+            </a>
+          </div>
+
+
+          <div class="d-flex justify-content-end gap-2 mt-1">
+            <button type="button" class="btn btn-secondary" onclick="editUserInfo()">Edit</button>
+            <button type="button" class="btn btn-success" onclick="saveUserInfo()">Save</button>
+          </div>
         </div>
       </form>
     </div>
