--- a/search.html
+++ b/search.html
@@ -174,7 +174,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="signOut" href="index.html" role="button">
+                        <a class="nav-link" href="profiles.html" role="button">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="28"
                                 height="28" stroke-width="1">
@@ -182,7 +182,7 @@
                                 <path d="M12 10m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
                                 <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855"></path>
                             </svg>
-                            Sign Out
+                            Profile
                         </a>
                     </li>
                 </ul>
