--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </svg>
                     </button> -->
                     <button type="button" class="bg-white rounded-2 px-12 py-6 fixed-size">
-                        <i class="material-icons saveDealButton">bookmark_border</i>
+                        <i class="material-icons saveDealButton">favorite_border</i>
                     </button>
                 </div>
             </div>
@@ -260,7 +260,7 @@
     <script src="./scripts/firebaseAPI_Team05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/index.js"></script>
     <script src="./scripts/navigateToSearch.js"></script>
     <script>
         logout(); //make sure user is logged out
