--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -172,11 +172,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="./profiles.html"
-                role="button"
-              >
+              <a class="nav-link" href="./profiles.html" role="button">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -268,9 +264,11 @@
                   height="28"
                   stroke-width="1"
                 >
-                  <path d="M8 6h12"></path>
-                  <path d="M6 12h12"></path>
-                  <path d="M4 18h12"></path>
+                  <path d="M19 8h-14"></path>
+                  <path d="M5 12h7"></path>
+                  <path d="M12 16h-7"></path>
+                  <path d="M16 14l4 4"></path>
+                  <path d="M20 14l-4 4"></path>
                 </svg>
               </button>
             </div>
