Move filter behind popup overlay when popup is open

--- a/search.html
+++ b/search.html
@@ -314,7 +314,7 @@
             </div>
         </div>  -->
 
-    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel"
+    <div class="offcanvas offcanvas-top z-1" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel"
         data-bs-scroll="true" data-bs-backdrop="false">
         <div class="offcanvas-header">
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
