--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -308,6 +308,20 @@
             <div class="d-flex flex-column text-center align-items-center">
               <button
                 class="btn rounded-circle recommended-item"
+                data-item="Cauliflower"
+                type="button"
+              >
+                <img
+                  src="images/shoppingListIcons/cauliflower.png"
+                  alt="cauliflower"
+                  class="shopping-item img-fluid"
+                />
+              </button>
+              <p class="fs-6 font-extralight">Cauliflower</p>
+            </div>
+            <div class="d-flex flex-column text-center align-items-center">
+              <button
+                class="btn rounded-circle recommended-item"
                 data-item="Apples"
                 type="button"
               >
